[gd_scene load_steps=10 format=2]

[ext_resource path="res://levels/Main.gd" type="Script" id=1]
[ext_resource path="res://entities/prop/palm_tree/PalmTree.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/prop/palm_tree/SandCastle.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/prop/palm_tree/Umbrella.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/sand_texture.png" type="Texture" id=5]
[ext_resource path="res://levels/UI.gd" type="Script" id=6]
[ext_resource path="res://fonts/Score.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/Timer.tres" type="DynamicFont" id=8]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=9]

[node name="Main" type="YSort"]
script = ExtResource( 1 )
props = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 112.457, 124.627 )
z_index = -100
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 12000, 12000 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="Score" type="Label" parent="CanvasLayer/UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -0.378754
margin_top = 15.0
margin_right = 121.621
margin_bottom = 35.0
custom_fonts/font = ExtResource( 7 )
text = "Mayhem : 2000"

[node name="Timer" type="Label" parent="CanvasLayer/UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 326.0
margin_top = 15.0
margin_right = 350.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 8 )
text = "60"

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 194.044, 106.427 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true
[connection signal="score_updated" from="." to="CanvasLayer/UI" method="_on_Main_score_updated"]
[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]
[connection signal="shot" from="Player" to="." method="_on_Player_shot"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
